--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -27,9 +27,10 @@
                                     <div class="screen logoicon pull-left">
                                         <div class="border-grey border-radius-three default-background-hover"
                                             style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
-                                            <img style="height: 100%; object-fit: contain;"
+                                            <img crop-width="40" load-image="1x1"
+                                            crop-height="40" crop-type="crop"
                                                 ng-if="category.data.icon && !ContentMedia.isIcon(category.data.icon)"
-                                                ng-src="{{category.data.icon }}">
+                                                data-final-src="{{category.data.icon }}">
                                             <div style="color:#5f5f5f"
                                                 ng-if="category.data.icon && ContentMedia.isIcon(category.data.icon)"
                                                 ng-class="category.data.icon">
