--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -9,12 +9,18 @@
         </div>
         <div id="emptyContainer" class="padded" ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
             <div ng-if="WidgetHome.media.data.content.enableFiltering" style="position: absolute;right:2em; top: 2em; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
-                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                <div style=" position: relative;">
+                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
+                </div>
             </div>
         </div>
         <div class="padded padding-top-zero text-overlay">
             <div ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0" style="float: right; padding: 10px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
-                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                <div style=" position: relative;">
+                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
+                </div>
             </div>
             <div class="list-layout">
                 <div class="row layout-1" infinite-scroll="WidgetHome.addMore()"
