--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -12,14 +12,22 @@
 
         <div id="emptyContainer" class="padded"
             ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
-            <div ng-if="WidgetHome.media.data.content.enableFiltering" style="position: absolute;right:2em; top: 2em; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
-                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+            <div ng-if="WidgetHome.media.data.content.enableFiltering"
+                style="position: absolute;right:2em; top: 2em; cursor: pointer;"
+                ng-click="WidgetHome.goToFilterScreen()">
+                <div style=" position: relative;">
+                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
+                </div>
             </div>
         </div>
         <div style="width: 100%; display: flex; flex-direction: row-reverse;"
             ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0">
             <div style="padding: 20px; padding-right: 30px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
-                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                <div style=" position: relative;">
+                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
+                </div>
             </div>
         </div>
         <div class="list-layout" id="listLayout2" infinite-scroll="WidgetHome.addMore()" infinite-scroll-distance="1"
