--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -13,13 +13,19 @@
             <div ng-if="WidgetHome.media.data.content.enableFiltering"
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
-                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                <div style=" position: relative;">
+                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
+                </div>
             </div>
         </div>
         <div style="width: 100%; display: flex; flex-direction: row-reverse;"
             ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0">
             <div style="padding: 20px; padding-right: 30px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
-                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                <div style=" position: relative;">
+                    <i class="glyphicon glyphicon-filter filter-funnel"></i>
+                    <div data-ng-if="WidgetHome.activeFilters" id="activeFilterIndicator"></div>
+                </div>
             </div>
         </div>
         <div class="padded padding-top-zero text-overlay">
