--- a/control/content/templates/categoryHome.html
+++ b/control/content/templates/categoryHome.html
@@ -80,8 +80,7 @@
                                 ng-class="{ 'disabled': ContentCategoryHome.itemSortableOptions.disabled }"></span>
 
                             <div class="media-holder pull-left auto-flex">
-                                <img load-image="1x1" data-final-src="{{item.data.icon}}" crop-width="40"
-                                crop-height="40" crop-type="crop" 
+                                <img load-image="1x1" aspect="1:1" data-final-src="{{item.data.icon}}" size="xs" crop-type="crop" 
                                     ng-if="item.data.icon && !ContentCategoryHome.isIcon(item.data.icon)">
                                 <div style="color:#5f5f5f"
                                     ng-if="item.data.icon && ContentCategoryHome.isIcon(item.data.icon)"
