--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -27,8 +27,8 @@
                                     <div class="screen logoicon pull-left">
                                         <div class="border-grey border-radius-three default-background-hover"
                                             style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
-                                            <img crop-width="40" load-image="1x1"
-                                            crop-height="40" crop-type="crop"
+                                            <img  load-image="1x1" aspect="1:1"
+                                             crop-type="crop" size="xs"
                                                 ng-if="category.data.icon && !ContentMedia.isIcon(category.data.icon)"
                                                 data-final-src="{{category.data.icon }}">
                                             <div style="color:#5f5f5f"
