--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -10,7 +10,7 @@
             </p>
         </div>
 
-        <div id="emptyContainer" class="padded"
+        <div id="emptyContainer" style="display: none;" class="padded"
             ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
             <div ng-if="WidgetHome.media.data.content.enableFiltering"
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
