--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -7,7 +7,7 @@
             <p ng-if="WidgetHome.showDescription()" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
             </p>
         </div>
-        <div id="emptyContainer" style="display: none;" class="padded" ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
+        <div id="emptyContainer"  class="padded" ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
             <div ng-if="WidgetHome.media.data.content.enableFiltering" style="position: absolute;right:2em; top: 2em; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
                 <div style=" position: relative;">
                     <i class="glyphicon glyphicon-filter filter-funnel"></i>
