--- a/widget/templates/filters.html
+++ b/widget/templates/filters.html
@@ -12,9 +12,8 @@
                             <img class="categoryScreenIcon" crop-width="30" load-image="1x1" crop-height="30"
                                 crop-type="crop" ng-if="category.data.icon && !WidgetFilters.isIcon(category.data.icon)"
                                 data-final-src="{{category.data.icon }}">
-                            <div style="color:#5f5f5f"
-                                ng-if="category.data.icon && WidgetFilters.isIcon(category.data.icon)"
-                                ng-class="category.data.icon">
+                            <div ng-if="category.data.icon && WidgetFilters.isIcon(category.data.icon)"
+                                ng-class="category.data.icon" class="cat-icon-widget">
                             </div>
                         </div>
                         <div class="category-name" style="margin-left: 15px;">
@@ -68,3 +67,29 @@
             class="btn btn-primary apply-button">Apply</button>
     </div>
 </div>
+<script>
+       // get app theme
+       buildfire.appearance.getAppTheme((err, appTheme) => {
+                if (err) return console.error(err);
+
+                let categoryName= document.querySelector('.category-name');
+                let subCategory= document.querySelector('.subcategory-bubble p');
+                let categoryIcon= document.querySelector('.cat-icon-widget');
+                let categoryArrow= document.querySelector('.expand-collapse');
+                    
+                document.documentElement.style.setProperty('--bodyText', appTheme.colors.bodyText);
+                
+                // link category name color with app theme
+                categoryName.style.setProperty('color', appTheme.colors.bodyText);
+
+                // link sub category text color with app theme
+                subCategory.style.setProperty('color', appTheme.colors.bodyText);
+
+                // link category icon color with app theme
+                categoryIcon.style.setProperty('color', appTheme.colors.bodyText, 'important');
+                categoryArrow.style.setProperty('color', appTheme.colors.bodyText, 'important');
+
+ 
+
+       });
+</script>
