--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1,5 +1,6 @@
 :root {
 	--bodyText: #cecece;
+	--primaryTheme : #cecece;
 }
 
 /* Plugin CSS */
@@ -1350,8 +1351,8 @@ input[type=range]::-ms-track {
 			border-color: var(--bodyText) !important;
 		}
 		input[type="checkbox"]:checked + .subcategory-label.check::before, input[type="checkbox"]:checked + .subcategory-label.minus::before {
-			background-color: var(--bodyText) !important;
-			border-color: var(--bodyText) !important;
+			background-color: var(--primaryTheme) !important;
+			border-color: var(--primaryTheme) !important;
 
 		}
 
@@ -1378,7 +1379,8 @@ input[type=range]::-ms-track {
 		}
 
 		.subcategory-bubble.picked {
-			background-color:#DDDDDD;
+			/* background-color:#DDDDDD; */
+			background-color:rgba(150,150,150,0.3);
 		}
 		
 		.subcategory-bubble p {
