--- a/widget/templates/filters.html
+++ b/widget/templates/filters.html
@@ -46,7 +46,7 @@
                                 id="{{subcategory.id}}" class="subcategory-bubble"
                                 ng-class="WidgetFilters.isSubcategoryPicked(category.id, subcategory.id) ? 'picked' : ''">
                                 <span style="margin-right: 5px;" class="selected-subCat-icon"
-                                    ng-if="WidgetFilters.isSubcategoryPicked(category.id, subcategory.id)">&#x2714;</span>
+                                    ng-if="WidgetFilters.isSubcategoryPicked(category.id, subcategory.id)"></span>
                                 <p>{{subcategory.name}}</p>
                             </div>
                         </div>
@@ -71,12 +71,11 @@
        // get app theme
        buildfire.appearance.getAppTheme((err, appTheme) => {
                 if (err) return console.error(err);
-                console.log('appTheme',appTheme);
+
                 let categoryName= document.querySelector('.category-name');
                 let subCategory= document.querySelector('.subcategory-bubble p');
                 let categoryIcon= document.querySelector('.cat-icon-widget');
                 let categoryArrow= document.querySelector('.expand-collapse');
-                let selectedSubCatIcon= document.querySelector('.selected-subCat-icon');
                     
                 document.documentElement.style.setProperty('--bodyText', appTheme.colors.bodyText);
                 document.documentElement.style.setProperty('--primaryTheme', appTheme.colors.primaryTheme);
@@ -91,7 +90,6 @@
                 categoryIcon.style.setProperty('color', appTheme.colors.icons, 'important');
                 categoryArrow.style.setProperty('color', appTheme.colors.icons, 'important');
 
-                selectedSubCatIcon.style.setProperty('color', appTheme.colors.primaryTheme);
 
  
 
