updated vg-vimeo.min.js file into new file & fixed UI floating and render conflicting issues on CP while adding action items

--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -394,3 +394,12 @@ Style for loader
             width: 82.5% !important;
             max-width: 82.5% !important;
         }
+
+
+        .links-list.hide-empty.dynamic-link-list.draggable-list-view{
+            margin-top: 40px !important;
+        }
+
+        .item.clearfix.row{
+            display: flex;
+        }
