--- a/widget/templates/filters.html
+++ b/widget/templates/filters.html
@@ -20,15 +20,14 @@
                             {{category.data.name}}
                         </div>
                         <div class="input-container">
-                            <div style="margin-right: 1em;">
+                            <div class="box-item"  ng-click="WidgetFilters.pickCategory(category)">
                                 <div class="checkbox checkbox-primary no-label" style="margin-top:3px;">
                                     <input type="checkbox" ng-checked="WidgetFilters.isCategoryPicked(category.id)"
                                         class="ng-pristine ng-untouched ng-valid">
                                 </div>
                                 <!-- <input type="checkbox" id="subcategory.id" name="subcategory.name" ng-click="WidgetFilters.pickSubcategory(category.id, subcategory.id)" value="subcategory.checked"> -->
-                                <div class="checkbox checkbox-primary no-label" style="margin: 0;">
+                                <div class="checkbox checkbox-primary no-label" style="margin: 0; z-index: -1;">
                                     <input type="checkbox" id="{{category.id}}" ng-disabled="config.requireLogin"
-                                        ng-click="WidgetFilters.pickCategory(category)"
                                         ng-checked="WidgetFilters.isCategoryPicked(category.id)"
                                         class="ng-pristine ng-untouched ng-valid" disabled="disabled">
                                     <label ng-class="WidgetFilters.getCategoryIconState(category)"
@@ -36,13 +35,13 @@
                                 </div>
                             </div>
                             <span ng-click="WidgetFilters.expand($index)"
-                                class="expand-collapse chevron top chev"></span>
+                                class="expand-collapse chevron top chev drop-control"></span>
 
                         </div>
                     </div>
                     <div id="{{ 'subcat-' + $index }}" class="subcategories-container">
-                        <div class="subcategory" ng-repeat="subcategory in category.data.subcategories">
-                            <div ng-click="WidgetFilters.pickSubcategory(category.id, subcategory.id)"
+                        <div class="subcategory" ng-repeat="subcategory in category.data.subcategories" ng-click="WidgetFilters.pickSubcategory(category.id, subcategory.id)">
+                            <div
                                 id="{{subcategory.id}}" class="subcategory-bubble"
                                 ng-class="WidgetFilters.isSubcategoryPicked(category.id, subcategory.id) ? 'picked' : ''">
                                 <span style="margin-right: 5px;" class="selected-subCat-icon"
