--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -11,7 +11,7 @@
         </div>
 
         <div id="emptyContainer" class="padded"
-            ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
+            ng-if="!loadingData">
             <div ng-if="WidgetHome.media.data.content.enableFiltering"
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
@@ -30,9 +30,8 @@
                 </div>
             </div>
         </div>
-        <div class="list-layout" id="listLayout2" infinite-scroll="WidgetHome.addMore()" infinite-scroll-distance="1"
-            data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.stopScroll">
-            <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.displayItems"
+        <div class="list-layout" id="listLayout2">
+            <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.items"
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="list-item-media text-left overflow-hidden">
                     <div class="list-media-holder pull-left text-overlay"
