--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -9,7 +9,7 @@
                 ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml"></p>
         </div>
         <div id="emptyContainer" class="padded"
-            ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
+            ng-if="!loadingData">
             <div ng-if="WidgetHome.media.data.content.enableFiltering"
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
@@ -29,9 +29,8 @@
             </div>
         </div>
         <div class="padded padding-top-zero text-overlay">
-            <div class="list-layout" infinite-scroll="WidgetHome.addMore()" infinite-scroll-distance="1"
-                data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.stopScroll">
-                <div ng-repeat="item in WidgetHome.displayItems" ng-if="$index % 2 == 0" class="row text-overlay">
+            <div class="list-layout" infinite-scroll="WidgetHome.addMore()">
+                <div ng-repeat="item in WidgetHome.items" ng-if="$index % 2 == 0" class="row text-overlay">
                     <div class="list-item-odd col-xs-6 pull-left clickable " ng-click="WidgetHome.goToMedia($index)">
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="li-actions-item">
