--- a/widget/templates/filters.html
+++ b/widget/templates/filters.html
@@ -63,7 +63,7 @@
 
     <div class="filters-footer">
         <button ng-click="WidgetFilters.applyFilters()" ng-class="WidgetFilters.hasFilters() ? '' : 'disabled'"
-            class="btn btn-primary apply-button">Apply</button>
+            class="btn btn-primary apply-button">{{WidgetFilters.filtersApplyButtonString}}</button>
     </div>
 </div>
 <script>
