--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -11,7 +11,7 @@
         </div>
 
         <div id="emptyContainer" class="padded"
-            ng-if="!loadingData">
+            ng-if="!loadingData && !WidgetHome.items.length">
             <div ng-if="WidgetHome.media.data.content.enableFiltering"
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
