--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -9,7 +9,7 @@
             </p>
         </div>
         <div id="emptyContainer" class="padded"
-            ng-if="!loadingData">
+            ng-if="!loadingData && !WidgetHome.items.length">
             <div ng-if="WidgetHome.media.data.content.enableFiltering"
                 style="position: absolute;right:2em; top: 2em; cursor: pointer;"
                 ng-click="WidgetHome.goToFilterScreen()">
