--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -12,10 +12,10 @@
                                          data-ng-hide="WidgetMedia.showVideo">
                                         <img ng-if="WidgetMedia.item.data.topImage" data-ng-hide="skipMediaPage && WidgetMedia.item.data.videoUrl" load-image="16x9" style="width: 161px;height: 91px;"
                                              crop-width="161" crop-height="91" crop-type="crop"
-                                             data-final-src="{{WidgetMedia.item.data.topImage | resizeImage : 161:91}}">
+                                             data-final-src="{{WidgetMedia.item.data.topImage | resizeImage : 161:91}}" alt="{{WidgetMedia.item.data.title}} top image">
                                         <img ng-if="!WidgetMedia.item.data.topImage" style="width: 161px;height: 91px;"
                                              crop-width="161" crop-height="91" crop-type="crop"
-                                             src="../../../styles/media/holder-16x9.png">
+                                             src="../../../styles/media/holder-16x9.png" alt="top image">
                                     </div>
                                     <div class="people-info text-center col-xs-12">
                                         <h5 class="ellipsis margin-top-fifteen whiteTheme" style="font-size: 16px;">
